--- a/BlogSite/Views/AdminCategory/Index.cshtml
+++ b/BlogSite/Views/AdminCategory/Index.cshtml
@@ -18,8 +18,8 @@
         <tr>
             <th>@item.CategoryID</th>
             <td>@item.CategoryName</td>
-            <td><a href="#" class="btn btn-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-success">Güncelle</a></td>
+            <td><a href="/AdminCategory/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
+            <td><a href="/AdminCategory/UpdateCategory/@item.CategoryID" class="btn btn-success">Güncelle</a></td>
             <td><a href="#" class="btn btn-warning">Başlıklar</a></td>
         </tr>
     }
