--- a/BlogSite/Views/Heading/Index.cshtml
+++ b/BlogSite/Views/Heading/Index.cshtml
@@ -81,17 +81,17 @@
                                     <span class="badge badge-success">@item.Category.CategoryName</span>
                                 </td>
                                 <td class="project-actions text-right">
-                                    <a class="btn btn-primary btn-sm" href="#">
+                                    <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingID">
                                         <i class="fas fa-folder">
                                         </i>
                                         İçerik
                                     </a>
-                                    <a class="btn btn-info btn-sm" href="#">
+                                    <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingID">
                                         <i class="fas fa-pencil-alt">
                                         </i>
                                         Düzenle
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="#">
+                                    <a class="btn btn-danger btn-sm" href="/Heading/HeadingDelete/@item.HeadingID">
                                         <i class="fas fa-trash">
                                         </i>
                                         Sil
@@ -109,6 +109,7 @@
     </section>
 </body>
 </html>
+<a href="/Heading/AddHeading/" class="btn btn-primary">Yeni başlık girişi</a>
 
 
 
